# Dad

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_SETUP_PLAN.md  Caddyfile  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  netlify.toml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f0d00c3b2b3_add_documents.py  218d1d6c7c28_add_email_is_hidden.py  29e54c7de336_add_notifications.py  5e1aabd2391f_add_document_instructions.py  746d194fce8e_init.py  8fcebbdf8133_add_email_accounts_messages_extend_.py  93c92b9902a6_add_calendar_events.py  9723613b17b9_add_audit_logs.py  9aa713db7d61_add_meetings_action_items_decisions_.py  a1b2c3d4e5f6_add_device_tokens.py  a6d1c5306f7d_add_presentations.py  b2f4a1c9e7d0_add_approval_review_note.py  b97050924e84_add_briefings.py  d1888b94f5b1_add_push_subscriptions.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  ratelimit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  approval.py  audit.py  briefing.py  calendar.py  device_token.py  document.py  email.py  meeting.py  mixins.py  notification.py  presentation.py  push.py  user.py
backend/app/schemas/: admin.py  approval.py  briefing.py  calendar.py  dashboard.py  document.py  email.py  meeting.py  notification.py  presentation.py  search.py  user.py
backend/tests/: conftest.py  fakes.py  test_admin.py  test_ai_client.py  test_approvals.py  test_auth.py  test_briefing.py  test_calendar.py  test_search.py
(+217 files in other folders)
