[project]
name = "dad-backend"
version = "0.1.0"
description = "AI executive assistant dashboard - backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "email-validator>=2.2",
    "pydantic-settings>=2.6",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0.1,<4.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "arq>=0.26",
    "cryptography>=43.0",
    "pdfplumber>=0.11",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "msal>=1.31",
    "httpx>=0.27",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
